@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "September 2014" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_UTILS "8" "October 2014" "smp_utils\-0.99" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
